--- a/cw1/index.html
+++ b/cw1/index.html
@@ -8,11 +8,12 @@
     <h2>Tytuł</h2>
     
     <main>
-        <div class="leftArr"></div>
+        <div class="leftArr"><</div>
         <div class="content">
             ZDJĘCIE
+            <img src="/img/1.webp" alt="">
         </div>
-        <div class="rightArr"></div>
+        <div class="rightArr">></div>
     </main>
 
     <footer>
