--- a/cw1/index.html
+++ b/cw1/index.html
@@ -11,7 +11,7 @@
         <div class="leftArr"><</div>
         <div class="content">
             ZDJĘCIE
-            <img src="/img/1.webp" alt="">
+            <img src="img/1.webp" alt="">
         </div>
         <div class="rightArr">></div>
     </main>
