--- a/cw1/index.html
+++ b/cw1/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
+    
     <h1>Widoki</h1>
     <h2>Tytuł</h2>
     
